--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,3 +3,23 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule (.*) app.html [QSA,L]
 </IfModule>
+
+
+<IfModule mod_expires.c>
+
+    ExpiresActive on
+    ExpiresDefault                                      "access plus 1 month"
+
+  # CSS
+    ExpiresByType text/css                              "access plus 1 year"
+
+  # Favicon (cannot be renamed!)
+    ExpiresByType image/x-icon                          "access plus 1 week"
+
+  # HTML
+    ExpiresByType text/html                             "access plus 0 seconds"
+
+  # JavaScript
+    ExpiresByType application/javascript                "access plus 1 year"
+
+</IfModule>
